package chapter1;

public interface FlyBehavior {

    void fly();
}
