package chapter1;

public interface QuackBehavior {

    void quack();
}
